fetch_demo/target/debug/build/anyhow-8686cc5cce18b6d0/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /Users/pt839393/tmp/rust_2020/fetch_demo/target/debug/build/anyhow-8686cc5cce18b6d0/out/probe.rs:2:5
  |
2 |     #![feature(backtrace)]
  |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
